[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "0.8"
libc = "0.2"

[dependencies.cairo-sys-rs]
version = "0.3.3"

[dependencies.gdk-pixbuf-sys]
version = "0.3.2"

[dependencies.gio-sys]
version = "0.3.2"

[dependencies.glib-sys]
version = "0.3.2"

[dependencies.gobject-sys]
version = "0.3.2"

[dependencies.pango-sys]
version = "0.3.2"

[features]
v3_10 = ["v3_8"]
v3_12 = ["v3_10"]
v3_14 = ["v3_12"]
v3_16 = ["v3_14"]
v3_18 = ["v3_16"]
v3_20 = ["v3_18"]
v3_22 = ["v3_20"]
v3_6 = []
v3_8 = ["v3_6"]

[lib]
name = "gdk_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgdk-3"
homepage = "http://gtk-rs.org/"
keywords = ["gdk", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gdk"
name = "gdk-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.3.3"
